fixes in scrollbar

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,15 +1,24 @@
 .stats-row{
 	display: flex;
+	overflow-x: hidden;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .stats-row::-webkit-scrollbar {
-	display: none;
+	/* display: none; */
+	height: 10px !important;
+	margin-left:20px;
+	width: 10px !important;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .stats-row {
-	-ms-overflow-style: none;  /* IE and Edge */
-	scrollbar-width: none;  /* Firefox */
+	-ms-overflow-style: none;  
+	scrollbar-width: none;  
+}
+.stats-row:hover   {
+	display: flex;  
+	overflow-x: scroll;
+	margin-bottom: -10px;
 }
 .stats-container{  
 	padding: 30px;
